# PromptPressure

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_METRICS_IMPLEMENTATION_SUMMARY.md  LICENSE  METRICS_FEATURE_SUMMARY.md  MONITORING.md  Package.swift  README.md  TODOS.md  config.py  config.yaml  config_metrics_example.yaml  config_mock.yaml  config_openchat.yaml  config_openrouter.yaml  config_openrouter_gpt_oss_20b_free.yaml  config_openrouter_kimi_k2_free.yaml  database.py  evals_dataset.json  evals_tone_sycophancy.json  grafana_dashboard.json  litellm_config.yaml  metrics.py  metrics_example.py  metrics_report.json  monitoring.py  promptpressure.db  pyproject.toml  rate_limit.py  registry.json  reporting.py  requirements.txt  roadmap.md  run1.json  run_eval.py  run_promptpressure_cloud.bat  (+11 more)
.codex/environments/: environment.toml
.github/workflows/: macos-dmg-release.yml
MacApp/Checks/: main.swift
MacApp/Resources/: AppIcon.icns
adapters/: __init__.py  groq_adapter.py  lmstudio_adapter.py  mock_adapter.py  openai_adapter.py  openrouter_adapter.py
archive/adversarial/: README.md  refusal_sensitivity.json
configs/: config_claude_code.yaml  config_claude_code_slice.yaml  config_deepseek_r1.yaml  config_drift_claude_code.yaml  config_drift_ollama.yaml  config_litellm_deepseek_chat.yaml  config_litellm_deepseek_r1.yaml  config_litellm_gemini_flash.yaml  config_litellm_gemini_pro.yaml  config_litellm_gpt4o.yaml  config_litellm_grok3.yaml  config_litellm_grok3_mini.yaml  config_litellm_grok_fast.yaml  config_litellm_grok_multi_agent.yaml  config_litellm_grok_reasoning.yaml  config_litellm_haiku.yaml  config_litellm_llama70b.yaml  config_litellm_opus.yaml  config_litellm_sonnet.yaml  config_lmstudio.yaml  config_mimo_v2_omni.yaml  config_mimo_v2_pro.yaml  config_opencode_zen.yaml  config_openrouter_deepseek_v4_flash.yaml  config_openrouter_deepseek_v4_pro.yaml  config_openrouter_gemini_flash.yaml  config_openrouter_gemini_pro.yaml  config_openrouter_glm_4_5_air_free.yaml  config_openrouter_glm_5_1.yaml  config_openrouter_glm_5_1_smoke.yaml  config_openrouter_grok420.yaml  config_openrouter_grok_fast.yaml  config_openrouter_grok_multi_agent.yaml  config_openrouter_grok_reasoning.yaml  config_openrouter_haiku.yaml  config_openrouter_owl_alpha.yaml  config_openrouter_poolside_laguna_m1.yaml  config_openrouter_sonnet.yaml  example_metrics_config.yaml
corpus/drift-v0.1/: README.md  schema.json
desktop/: sidecar.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CONFIGURATION.md  known-issues.md
examples/: claude_sonnet_self_eval.html  claude_sonnet_self_eval.json  grok420_eval.json  metrics_example.py  mimo_v2_comparison.json  sample_report.html  three_model_comparison.json
frontend/: app.js  index.html  tailwind.css
monitoring/: README.md  prometheus.yml
outputs/: README.md  aggregated_metrics.json  metrics_report.json  report.html  report.md
outputs/2025-12-23_18-11-44/: metrics.json  mock_results.csv  mock_results.json
outputs/2025-12-23_19-23-53/: metrics.json  mock_results.json
outputs/2025-12-23_19-33-29/: metrics.json  mock_results.json
outputs/2025-12-23_19-45-28/: metrics.json
outputs/2025-12-23_19-47-49/: metrics.json  mock_results.csv
outputs/2025-12-23_20-13-07/: metrics.json  (+2 more)
outputs_grok420/: aggregated_metrics.json  metrics_report.json  report.html  report.md
outputs_mimo_omni/: aggregated_metrics.json  metrics_report.json  report.html  report.md
outputs_mock/: aggregated_metrics.json  metrics_report.json  report.html  report.md
plugins/: __init__.py  demo_scorer.py
promptpressure/: __init__.py  api.py  batch.py  cli.py  config.py  database.py  grading.py  launcher.py  launcher_translate.py  metrics.py  per_turn_metrics.py  resilience.py  run_bus.py  run_log.py  tier.py
reports/: drift-v0.1-method.json  drift-v0.1-method.md
results/: claude-sonnet-4.6-full-suite-2026-04-01.json  cross-model-comparison-2026-04-01.md  deepseek-r1-full-suite-2026-03-26.json  gemini-3-flash-full-suite-2026-04-01.json  glm-5.1-analysis.md  glm-5.1-drift-flags.md  glm-5.1-followup-analysis.md  grok-4.20-multi-agent-full-suite-2026-03-31.json  openrouter-gemini_pro-full-suite-2026-04-01.json  openrouter-grok_multi_agent-full-suite-2026-04-01.json
script/: build_and_run.sh  package_dmg.sh
scripts/: aggregate_openrouter_scores.py  compare.py  normalize_sonnet46_outputs.py  rejudge_kimi26.py  rejudge_sonnet46.py  rejudge_sonnet46_retry_failed.py  start-litellm.sh  validate_dataset.py
templates/: report_default.md
tests/: conftest.py  test_adapters.py  test_aggregate_openrouter_scores.py  test_api_launcher.py  test_app_sidecar.py  test_batch.py  test_claude_code_adapter.py  test_cli_tier.py  test_config.py  test_config_advanced.py  test_conftest_smoke.py  test_dataset_validation.py  test_deepseek_native_adapter.py  test_drift_calibration.py  test_drift_cli.py  test_drift_dimensions.py  test_drift_judge_runner.py  test_drift_pipeline.py  test_drift_schema.py  test_env.py  test_launcher_cli.py  test_launcher_translate.py  test_litellm_adapter.py  test_metrics_full.py  test_metrics_simple.py  test_ollama_adapter.py  test_opencode_adapter.py  test_openrouter.py  test_per_turn_metrics.py  test_reporting.py  test_retry.py  test_run_bus.py  test_tier_filtering.py
(+204 files in other folders)
