[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpressure"
version = "3.1.0"
description = "Behavioral eval for LLM refusal sensitivity, tone consistency, and psychological reasoning"
authors = [
  { name = "Joeseph Grey" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0,<1.0",
    "uvicorn>=0.20.0,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19.0,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.24.0,<1.0",
    "jinja2>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "prometheus-client>=0.17,<1.0",
    "sse-starlette>=1.6,<4.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.60,<5.0",
    "cachetools>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
litellm = [
    "litellm[proxy]>=1.80",
]

[project.scripts]
promptpressure = "promptpressure.cli:main"
pp = "promptpressure.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptpressure*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
