[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpressure-evals"
version = "3.2.0"
description = "Multi-turn behavioral drift detection for LLMs — tone, sycophancy, refusal sensitivity, persona stability"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joeseph Grey" },
]
keywords = ["llm", "evaluation", "benchmark", "behavioral", "ai-safety", "red-team", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0,<1.0",
    "uvicorn>=0.20.0,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.19.0,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.24.0,<1.0",
    "jinja2>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "prometheus-client>=0.17,<1.0",
    "sse-starlette>=1.6,<4.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.60,<5.0",
    "cachetools>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "build>=1.0",
    "twine>=4.0",
]
litellm = [
    "litellm[proxy]>=1.80",
]

[project.urls]
Homepage = "https://github.com/StressTestor/PromptPressure"
Repository = "https://github.com/StressTestor/PromptPressure"
Issues = "https://github.com/StressTestor/PromptPressure/issues"

[project.scripts]
promptpressure = "promptpressure.cli:main"
pp = "promptpressure.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptpressure*"]

[tool.setuptools.package-data]
# Ship templates AND the launcher frontend (HTML/CSS/JS) so pip-installed
# copies find static assets at runtime. api.py resolves the frontend dir
# via Path(__file__).resolve().parent / "frontend" which works for both
# source-tree and site-packages installs.
promptpressure = [
    "templates/*.html",
    "templates/*.md",
    "frontend/*.html",
    "frontend/*.js",
    "frontend/*.css",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
